refine category chart